feat:Adicionada responsibidade para dispositivos mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,7 +75,7 @@ input:focus, textarea:focus {
 }
 
 .slide {
-  @apply bg-azul-400/40 text-center rounded-2xl gap-4 p-4 pb-8;
+  @apply bg-azul-400/40 text-center rounded-2xl gap-4 p-4;
   display: flex!important;
   flex-direction: column!important;
   align-items: center!important;
@@ -105,6 +105,12 @@ input:focus, textarea:focus {
 
 .personal-project {
   padding: 16px!important;
+}
+
+@media(max-width:640px) {
+  .personal-project {
+    padding: 4px!important;
+  }
 }
 
 
