--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,7 @@
 body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
+  overflow: overlay!important;
 }
 
 input, textarea {
